[package]
authors = ["EmberCraze <maher.shaker@live.se>"]
name = "board_api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "board_api"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "msgpack"] }
serde = { version = "1.0.136", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
sea-orm = {version = "0.6", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
